Adding a skeleton for the core game loop

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,15 +1,17 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
 project(gameserver)
 
 set(SCHEMA_DIR "../data/schema")
 set(PROTOBUF_IMPORT_DIRS "../data/schema/")
 
+add_definitions("-std=c++1z")
+
 find_package(Protobuf REQUIRED)
 
-PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${SCHEMA_DIR}/first.proto)
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${SCHEMA_DIR}/game.proto)
 
-set(SRC_FILES main.cpp)
+file(GLOB_RECURSE SRC_FILES list_directories False ./src/*.hpp ./src/*.cpp)
 
 include_directories( 
   .
@@ -18,4 +20,7 @@ include_directories(
 
 add_executable(gameserver ${SRC_FILES} ${PROTO_SRCS})
 
-target_link_libraries(gameserver ${PROTOBUF_LIBRARY})
+target_link_libraries(gameserver 
+  ${PROTOBUF_LIBRARY} 
+  pthread
+)
